domain link changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo.png" type="image/icon type">
     <link rel="stylesheet" href="curtain.css">
-    <title id="title">SPSTT</title>
+    <title id="title">ISTEGECB</title>
 </head>
 
 <body style="margin: 0;">
@@ -62,7 +62,7 @@
             document.getElementById('title').innerText = 'launching...';
         }
         function redirect() {
-            window.location.assign("https://istegecb.ga")
+            window.location.assign("https://istegecb.com")
         }
     </script>
 </body>
